force-app/main/default/objects/Reference_P_C__c/Reference_P_C__c.object-meta.xml
<CustomObject>
    <description>Used by the Property and Casualty (P&amp;C) Team to onboard clients.</description>
    <label>Reference P&amp;C</label>
    <nameField>
        <displayFormat>Reference PC - {0000}</displayFormat>
        <label>Reference P&amp;C Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference P&amp;C&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>