force-app/main/default/objects/Reference_P_C__c/fields/Acord_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Acord_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acord Effective Date</label>
    <type>Date</type>
</CustomField>