force-app/main/default/objects/Reference_P_C__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <formula>TEXT(Carrier_Quote_Lookup__r.Carrier_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Name</label>
    <type>Text</type>
</CustomField>