force-app/main/default/objects/Reference_P_C__c/fields/Carrier_Quote_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Quote_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related Carrier Quote record. The Carrier Quote is related to the Acord object through the Prospect-Client.
This will be populated on creation of the Reference P&amp;C record.</description>
    <label>Carrier Quote Lookup</label>
    <referenceTo>Carrier_Quote__c</referenceTo>
    <relationshipLabel>Reference P&amp;C&apos;s</relationshipLabel>
    <relationshipName>Reference_P_C_s</relationshipName>
    <type>Lookup</type>
</CustomField>