force-app/main/default/objects/Reference_P_C__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case this reference record is related to.</description>
    <label>Case Lookup</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference P&amp;C&apos;s</relationshipLabel>
    <relationshipName>Reference_P_C_s</relationshipName>
    <type>Lookup</type>
</CustomField>