force-app/main/default/objects/Reference_P_C__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <description>There is a workflow rule and field update to populate this field when current step changes from New.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>