force-app/main/default/objects/Reference_P_C__c/fields/Discrepancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Type__c</fullName>
    <label>Discrepancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underwriting Discrepancy</fullName>
            </value>
            <value>
                <fullName>Onboarding Discrepancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>