force-app/main/default/objects/Reference_P_C__c/fields/Onboarding_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Discrepancy_Reason__c</fullName>
    <label>Onboarding Discrepancy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Onboarding_Discrepancy_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Paperwork</fullName>
            </value>
            <value>
                <fullName>Unable To Issue</fullName>
            </value>
            <value>
                <fullName>Policy Not Issued</fullName>
            </value>
            <value>
                <fullName>Parent/Child Or Combo Client Discrepancy</fullName>
            </value>
            <value>
                <fullName>Duplicate Coverage</fullName>
            </value>
            <value>
                <fullName>Unreviewed Ancillery</fullName>
            </value>
            <value>
                <fullName>Carrier Issuance Discrepancy</fullName>
            </value>
            <value>
                <fullName>Pending Endorsement</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Included Officer</fullName>
            </value>
            <value>
                <fullName>Workstate Change</fullName>
            </value>
            <value>
                <fullName>Removal Of Wc Report Service</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Missing Class Code/Waive Reason</fullName>
            </value>
            <value>
                <fullName>States Covered</fullName>
            </value>
            <value>
                <fullName>None/Reload</fullName>
            </value>
            <value>
                <fullName>L” Status - MMS</fullName>
            </value>
            <value>
                <fullName>Category Code Error – MMS</fullName>
            </value>
            <value>
                <fullName>Class Code Sheet</fullName>
            </value>
            <value>
                <fullName>FEIN</fullName>
            </value>
            <value>
                <fullName>Missing Documentation</fullName>
            </value>
            <value>
                <fullName>Missing States</fullName>
            </value>
            <value>
                <fullName>Officer Exclusion/Inclusion</fullName>
            </value>
            <value>
                <fullName>Signing Authority</fullName>
            </value>
            <value>
                <fullName>DBL Opt Out</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>