force-app/main/default/objects/Reference_P_C__c/fields/Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity that created the Service Onboarding PC case that this reference record is related to.</description>
    <label>Opportunity Lookup</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reference P&amp;C&apos;s</relationshipLabel>
    <relationshipName>Reference_P_C_s</relationshipName>
    <type>Lookup</type>
</CustomField>