force-app/main/default/objects/Reference_P_C__c/fields/Opportunity_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_Update_Date__c</fullName>
    <formula>IF (Opportunity_Lookup__r.RecordTypeId = &quot;0120g000000l3hi&quot;,

 Opportunity_Lookup__r.Status_Update_Date__c , NULL )</formula>
    <label>Opportunity Status Update Date</label>
    <type>Date</type>
</CustomField>