force-app/main/default/objects/Reference_P_C__c/fields/P_C_New_Case_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>P_C_New_Case_Follow_Up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>P&amp;C New Case Follow Up Date</label>
    <type>Date</type>
</CustomField>