force-app/main/default/objects/Reference_P_C__c/fields/P_C_Onboarding_Lookup__c.field-meta.xml
<CustomField>
    <fullName>P_C_Onboarding_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related Reference P&amp;C Onboarding record to the P&amp;C Discrepancy</description>
    <label>P&amp;C Onboarding Lookup</label>
    <referenceTo>Reference_P_C__c</referenceTo>
    <relationshipLabel>P&amp;C Discrepancies</relationshipLabel>
    <relationshipName>Reference_P_C_s</relationshipName>
    <type>Lookup</type>
</CustomField>