force-app/main/default/objects/Reference_P_C__c/fields/Probability_Reached_90__c.field-meta.xml
<CustomField>
    <fullName>Probability_Reached_90__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Probability Reached 90%</label>
    <type>DateTime</type>
</CustomField>