force-app/main/default/objects/Reference_P_C__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect-Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference P&amp;C&apos;s</relationshipLabel>
    <relationshipName>Reference_P_C_s</relationshipName>
    <type>Lookup</type>
</CustomField>