force-app/main/default/objects/Reference_P_C__c/recordTypes/P_C_Discrepancy.recordType-meta.xml
<RecordType>
    <fullName>P_C_Discrepancy</fullName>
    <active>true</active>
    <label>P&amp;C Discrepancy</label>
</RecordType>