force-app/main/default/objects/Reference_P_C__c/recordTypes/P_C_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>P_C_Onboarding</fullName>
    <active>true</active>
    <label>P&amp;C Onboarding</label>
</RecordType>