force-app/main/default/objects/Reference_P_C__c/validationRules/if_Onboarding_Discrepancy_type.validationRule-meta.xml
<ValidationRule>
    <fullName>if_Onboarding_Discrepancy_type</fullName>
    <active>true</active>
    <description>When Discrepancy type &quot;Onboarding Discrepancy&quot; is selected then the following fields are also required: Onboarding Discrepancy Category, Onboarding Discrepancy Reason</description>
    <errorConditionFormula>AND(RecordType.Name =&apos;P&amp;C Discrepancy&apos;, 
ISPICKVAL(Discrepancy_Type__c ,&apos;Onboarding Discrepancy&apos;), 
OR( ISPICKVAL( Onboarding_Discrepancy_Category__c ,&apos;&apos;) , 
ISPICKVAL( Onboarding_Discrepancy_Reason__c ,&apos;&apos;) ))</errorConditionFormula>
    <errorMessage>You must populate Onboarding Discrepancy Category and Onboarding Discrepancy Reason.</errorMessage>
</ValidationRule>