force-app/main/default/objects/Reference_P_C__c/listViews/All_My_Closed_Discrepancies.listView-meta.xml
<ListView>
    <fullName>All_My_Closed_Discrepancies</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Discrepancy_Category__c</columns>
    <columns>Onboarding_Discrepancy_Reason__c</columns>
    <columns>Opportunity_Lookup__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Discrepancy_Comment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_P_C__c.P_C_Discrepancy</value>
    </filters>
    <filters>
        <field>Discrepancy_Resolved_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All My Closed Discrepancies</label>
</ListView>