force-app/main/default/objects/Reference_P_C__c/listViews/P_C_All_Closed_Onboarding.listView-meta.xml
<ListView>
    <fullName>P_C_All_Closed_Onboarding</fullName>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Fed_ID_Number__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>NAME</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Carrier_Quote_Proposed_Effective_Date__c</columns>
    <columns>Comments__c</columns>
    <columns>Case_Priority__c</columns>
    <columns>Product__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Current_Step__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_P_C__c.P_C_Onboarding</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Completed,Payroll Run/Verification,Cancelled</value>
    </filters>
    <filters>
        <field>Opportunity_Probability__c</field>
        <operation>greaterOrEqual</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/2/2018 12:00 AM</value>
    </filters>
    <label>P&amp;C: All Closed Onboarding</label>
</ListView>