force-app/main/default/objects/Reference_P_C__c/listViews/P_C_Back_End_Cases_Escalated.listView-meta.xml
<ListView>
    <fullName>P_C_Back_End_Cases_Escalated</fullName>
    <columns>Date_Completed__c</columns>
    <columns>Acord_Effective_Date__c</columns>
    <columns>Back_End_Date_Received__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Back_End_Rep_Assigned__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Escalation_Reason__c</columns>
    <columns>Comments__c</columns>
    <columns>Front_End_Rep_Assigned__c</columns>
    <columns>Back_End_Supervisor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Back_End_Supervisor__c</field>
        <operation>equals</operation>
        <value>Kerri Moreau</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>P&amp;C Back-End Cases: Escalated</label>
    <sharedTo>
        <group>Agency_P_C_New_Business</group>
    </sharedTo>
</ListView>