force-app/main/default/objects/Reference_P_C__c/listViews/P_C_Back_End_Cases_In_Progress_Closed.listView-meta.xml
<ListView>
    <fullName>P_C_Back_End_Cases_In_Progress_Closed</fullName>
    <booleanFilter>(1 AND 2) OR (2 AND 3 AND 4)</booleanFilter>
    <columns>Acord_Effective_Date__c</columns>
    <columns>Back_End_Date_Received__c</columns>
    <columns>NAME</columns>
    <columns>BIS_Billing__c</columns>
    <columns>Product__c</columns>
    <columns>Back_End_Rep_Assigned__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Escalation_Reason__c</columns>
    <columns>Front_End_Rep_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>In Progress,Client in Discrepancy,Payroll Run/Verification,Escalated to Front-end Team,Waiting on AL3,Validated</value>
    </filters>
    <filters>
        <field>Back_End_Supervisor__c</field>
        <operation>equals</operation>
        <value>Kerri Moreau</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Ready for Setup</value>
    </filters>
    <filters>
        <field>Back_End_Rep_Assigned__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>USST P&amp;C Back-End Cases: In Progress</label>
    <sharedTo>
        <group>Agency_P_C_New_Business</group>
    </sharedTo>
</ListView>