force-app/main/default/objects/Reference_P_C__c/listViews/P_C_File_Receipt_NYSIF.listView-meta.xml
<ListView>
    <fullName>P_C_File_Receipt_NYSIF</fullName>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Fed_ID_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Product__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Probability__c</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Comments__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>P&amp;C Queue</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>notEqual</operation>
        <value>Completed,Payroll Run/Verification,Cancelled</value>
    </filters>
    <filters>
        <field>Opportunity_Probability__c</field>
        <operation>greaterOrEqual</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Disability</value>
    </filters>
    <label>P&amp;C File Receipt: DBL</label>
</ListView>