force-app/main/default/objects/Reference_P_C__c/listViews/P_C_My_Onboarding_Waiting_on_AL3.listView-meta.xml
<ListView>
    <fullName>P_C_My_Onboarding_Waiting_on_AL3</fullName>
    <columns>Acord_Effective_Date__c</columns>
    <columns>Back_End_Date_Received__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Current_Step__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>BIS_Billing__c</columns>
    <columns>Discrepancy_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_P_C__c.P_C_Onboarding</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>Waiting on AL3</value>
    </filters>
    <label>P&amp;C: My Onboarding - Waiting on AL3</label>
    <sharedTo>
        <group>Agency_P_C_New_Business</group>
    </sharedTo>
</ListView>