force-app/main/default/objects/Reference_P_C__c/listViews/P_C_My_Open_Discrepancies.listView-meta.xml
<ListView>
    <fullName>P_C_My_Open_Discrepancies</fullName>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Fed_ID_Number__c</columns>
    <columns>NAME</columns>
    <columns>Discrepancy_Comment__c</columns>
    <columns>Onboarding_Discrepancy_Category__c</columns>
    <columns>Onboarding_Discrepancy_Reason__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Discrepancy_Resolved_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Onboarding_Discrepancy_Reason__c</field>
        <operation>notEqual</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_P_C__c.P_C_Discrepancy</value>
    </filters>
    <label>P&amp;C: My Open Discrepancies</label>
</ListView>