force-app/main/default/objects/Reference_P_C__c/listViews/P_C_Open_References_Edit_for_Kaylyn_90.listView-meta.xml
<ListView>
    <fullName>P_C_Open_References_Edit_for_Kaylyn_90</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Carrier_Name__c</columns>
    <columns>Fed_ID_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Product__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Opportunity_Probability__c</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PC_Carrier_Sold_Lookup__c</columns>
    <columns>Policy_Number_Lookup__c</columns>
    <columns>Billing_Type_Lookup__c</columns>
    <columns>Child_ID_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>P&amp;C Queue</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Opportunity_Probability__c</field>
        <operation>greaterOrEqual</operation>
        <value>90</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/2/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notEqual</operation>
        <value>BND (ERISA BOND),Disability</value>
    </filters>
    <filters>
        <field>Sub_Product__c</field>
        <operation>notEqual</operation>
        <value>Reinstatement</value>
    </filters>
    <label>P&amp;C: File Receipt</label>
</ListView>